# neural-net-playground

./: .gitignore  Cargo.toml  README.md
src/: data.rs  main.rs  neural_network.rs
src/neural_network/: activation_functions.rs  edge.rs  layer.rs  mod.rs  neural_net.rs  node.rs  utils.rs
